# aind-ng-link

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/hello_world/: message_handlers.py
src/ng_link/: __init__.py  dispim_link.py  exaspim_link.py  iSPIM_top.py  link_utils.py  ng_layer.py  ng_state.py  parsers.py  raw_link.py  xml_parsing.py
src/ng_link/dataset_links/: __init__.py  dispim_link.py  exaspim_link.py  xml_parsing.py
src/ng_link/scripts/: ccf_ref.csv  create_compressed_segmentation_precompute.py  create_links.py  create_mesh_precompute.py  curate_links.py  dispim_link.py  exaspim_link.py  generate_cff_cell_count.py  generate_registered_brains_views.py  link_utils.py  xml-link.py  xml_parsing.py
src/ng_link/utils/: __init__.py  shader_utils.py  transfer.py  utils.py
tests/: test_ng_layer.py  test_ng_state.py  test_shader_utils.py
